--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <footer class="footer"></footer>
       <div class="pop_up" id="pop_up">
          <a class="X" href="#">
-             <img src="/Frame 10.svg" alt="X">
+             <img src="Frame 10.svg" alt="X">
          </a>
          <h1>Pop-up</h1>
      </div>    
